# libdense

./: .gitignore  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.md  Makefile  README.md  SECURITY.md  SHA256SUMS  SUPPORT.md  build_python_wheels.sh  install.sh  uninstall.sh  verify-release.sh
.wheel-builder/: pyproject.toml
bindings/: check_abi_coverage.py
bindings/cpp/: Makefile  README.md
bindings/cpp/benchmarks/: wrapper_overhead.cpp
bindings/cpp/examples/: basic_world.cpp
bindings/cpp/tests/: test_binding.cpp
bindings/python/: Makefile  README.md  setup.py
bindings/python/benchmarks/: benchmark_binding.py
bindings/python/tests/: test_binding.py
bindings/rust/: Cargo.toml  Makefile  README.md  build.rs
bindings/rust/examples/: basic_world.rs
bindings/rust/src/: lib.rs
bindings/rust/tests/: binding.rs
densebench/: dense-1000-local.txt  dense-10000-local.txt  dense_density_wall.html
docs/: ABI-COMPATIBILITY.md  BENCHMARK-SCOPE.md  BINARY-LAYOUT.md  BINDINGS.md  DENSEDB.md  INSTALLATION.md  LIBDENSE-SIM.md  PLATFORM-COMPATIBILITY.md  README.md  RELEASE-CHECKLIST.md  SECURITY-AND-SUPPLY-CHAIN.md
include/dense/: dense_sim.h  densedb.h
lib/linux-x86_64/: libdense_sim.so.0  libdense_sim.so.0.1.0  libdensedb.so.0  libdensedb.so.0.1.0
pkgconfig/: libdense_sim.pc.in  libdensedb.pc.in
release/abi/: libdense_sim.exports  libdensedb.exports  linux-x86_64.txt
release/api/: dense_sim.api  densedb.api
release/benchmarks/: BENCHMARK_SUMMARY.json  rc-gate.txt
tools/: generate-checksums.sh
(+5 files in other folders)
