[tool.poetry]
name = "dense-wheel-builder"
version = "0.1.0"
description = "Poetry environments for building Dense Python wheels"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
build = ">=1.2"
wheel = ">=0.43"
auditwheel = ">=6.0"
twine = ">=5.0"

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"
